[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/game/canal/2/elevator.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/game/canal/2/FilsAsc.jpg" type="Texture" id=3]
[ext_resource path="res://assets/game/canal/2/Numeros_Asc.jpg" type="Texture" id=4]
[ext_resource path="res://assets/game/canal/2/BoutonPoussoir.png" type="Texture" id=5]
[ext_resource path="res://assets/game/canal/2/BoutonPoussoirEnfonce.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="riddleOverlay" parent="." instance=ExtResource( 2 )]

[node name="blackScreen" type="Sprite" parent="."]

transform/pos = Vector2( 960.178, 544.63 )
transform/scale = Vector2( 1.94628, 1.94839 )
z/z = -2
texture = ExtResource( 3 )

[node name="controlPanel" type="Sprite" parent="."]

transform/pos = Vector2( 957.568, 549.417 )
transform/scale = Vector2( 1.95377, 1.94123 )
texture = ExtResource( 4 )

[node name="hitbox" type="Area2D" parent="controlPanel"]

transform/pos = Vector2( 7.15375, 2.73229 )
transform/scale = Vector2( 6.25961, 10.115 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.48509, 0, 0, 2.46154, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="controlPanel/hitbox"]

transform/scale = Vector2( 2.48509, 2.46154 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="validate" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1067.0
margin/top = 272.0
margin/right = 1238.0
margin/bottom = 451.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.4, 0.4 )
params/stretch_mode = 0

[node name="fils" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 696.0
margin/top = 114.0
margin/right = 1122.0
margin/bottom = 490.0
alignment = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


